--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-icons": "^4.10.1",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.14.1",
     "sort-by": "^0.0.2"
   },
